collapse issue halp fixed

--- a/css/home.css
+++ b/css/home.css
@@ -499,7 +499,7 @@ body {
 .notibox{
     color:white;
     font-family: 'Muli', sans-serif;
-    background-color:#6944ad;
+    background-color:#83CFFF;
     width:calc(100% - 60px);
     padding:15px;
     margin:15px;
